testing page edit by push from storm

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Beta release will be a basic filebrowser with rename-, move- delete- and create-
 <span class="p">));</span>
 </pre></div>
 
-<p>And in your controller import the actions like this</p>
+<p>And in your controller import the action(s) like this</p>
 
 <div class="highlight highlight-php"><pre><span class="k">public</span> <span class="k">function</span> <span class="nf">actions</span><span class="p">(){</span>
  <span class="k">return</span> <span class="k">array</span><span class="p">(</span>
