claryfied code example

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="highlight highlight-php"><pre><span class="nx">Yii</span><span class="o">::</span><span class="na">import</span><span class="p">(</span><span class="s1">'ext.dcfilemanager.DCFilemanager'</span><span class="p">);</span>
 
 <span class="nv">$this</span><span class="o">-&gt;</span><span class="na">widget</span><span class="p">(</span><span class="s1">'DCFilemanager'</span><span class="p">,</span> <span class="k">array</span><span class="p">(</span>
- <span class="s1">'rootDir'</span> <span class="o">=&gt;</span> <span class="s1">'../generatedFiles'</span><span class="p">,</span>
+ <span class="s1">'rootDir'</span> <span class="o">=&gt;</span> <span class="s1">'../your/path'</span><span class="p">,</span>
  <span class="s1">'headline'</span> <span class="o">=&gt;</span> <span class="s1">'Super Filebrowser Test'</span><span class="p">,</span>
  <span class="s1">'containerId'</span> <span class="o">=&gt;</span> <span class="s1">'myTree'</span><span class="p">,</span>
  <span class="s1">'theme'</span> <span class="o">=&gt;</span> <span class="s1">'default'</span><span class="p">,</span>
