--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 <span class="p">}</span>
 </pre></div>
 
-       
+
+    </section>
     <footer>
         <p>This project is maintained by <a href="https://github.com/DC-development">DC-development</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
